--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,154 @@
 .App {
   text-align: center;
+  font-family: SuezOne-Regular;
 }
-
-.App-logo {
+@font-face { font-family: SuezOne-Regular; 
+  src: url('./SuezOne-Regular.ttf'); } 
+.wedding-invite{
+  background-color: #e4eded;
+  width: 100%;
+}
+.wedding-invite-img{
   height: 40vmin;
+}
+.App-logo {
+  height: 6vmin;
   pointer-events: none;
 }
+.invite-txt{
+  margin: 3%;
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+    font-size: 1.4rem;
+}
+.confirmation{
+display: flex;
+flex-direction: row-reverse;
+justify-content: center;
+text-align: center;
+cursor: pointer;
+}
 
+span{
+  margin-bottom: 2%;
+}
+.column{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2% 4% 2% 4%;}
+
+.input{
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9rem;
+  margin: 2%;
+  font-weight: bold;
+  padding: 0% 32% 0% 32%
+}
+label{
+  margin-bottom: 2%;
+  font-size: 1rem;
+}
+h5{
+  font-size: 1rem;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.bold{
+  font-weight: bold;
+}
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(6px + 2vmin);
+  color: rgb(41, 39, 39);
+}
+.amount{
+  cursor: pointer;
+  font-size: 1.3rem;
+}
+.amount-num{
+  margin: 2%;
+  font-size: larger;
+}
+input{
+  height: 6px;
+  padding:10px;
+  border:0;
+  border-radius: 8px;
+  box-shadow: 0 0 15px 8px rgba(11, 11, 11, 0.06); 
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  margin: 1%;
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
 }
 
+button:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.button:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.button:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.green{
+background-color: green;
+border-radius: 50px;
+}
+.red{
+  background-color: red;
+  border-radius: 50px;
+}
+.white{
+  background-color: white;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
