--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 @font-face { font-family: SuezOne-Regular; 
   src: url('./SuezOne-Regular.ttf'); } 
+  
 .wedding-invite{
   background-color: #e4eded;
   width: 100%;
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   font-weight: bold;
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 .confirmation{
 display: flex;
@@ -91,10 +92,11 @@ input{
   appearance: none;
 }
 select{
-  height: 6px;
+  text-align: center;
   padding:10px;
   border-radius: 8px;
 }
+
 button{
   margin: 1%;
   align-items: center;
